# EmotionRecognition

./: .gitignore  README.md  custom_dataset.py  extract.py  model.py  preprocessing_CREMA.py  pyproject.toml  test.py  test_preprocessing.ipynb
src/: 00_augmentation_analyisis.ipynb  01_model_training.ipynb  02_model_eval.ipynb  custom_dataset.py  extract.py  model.py  preprocessing_CREMA.py  test.py  training_script.py  utils.py
src/results/: augment_train_accuracies.npy  augment_train_loss.npy  augment_val_acc.npy  augment_val_loss.npy  final_train_accuracies.npy  final_train_loss.npy  train_accuracies.npy  train_augment_accuracies.npy  train_augment_loss.npy  train_augment_val_acc.npy  train_augment_val_loss.npy  train_loss.npy  train_spec_augment_accuracies.npy  train_spec_augment_loss.npy  train_spec_augment_val_acc.npy  train_spec_augment_val_loss.npy  train_val_acc.npy  train_val_loss.npy  val_acc.npy  val_loss.npy
