[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
torch = "^2.4.0"
pandas = "^2.0.0"
librosa = "^0.10.2"
soundfile = "^0.12.1"
matplotlib = "^3.9.2"
tensorflow-addons = "^0.22.0"
tensorflow = "2.14.0"
numpy = "^1.23.5"
scikit-learn = "^1.5.1"
seaborn = "^0.13.2"
jupyter = "^1.0.0"

[tool.poetry.scripts]
extract = "src.extract:run"
train  = "src.training_script:run"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


